[project]
name = "immich-gphoto-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "aiosqlite>=0.20.0",
    "playwright>=1.49.1",
    "sqlalchemy[asyncio]>=2.0.37",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.9"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",   # pydocstyle
    "CPY", # flake8-copyright
    "T20", # flake8-print
]
