[project]
name = "immich-gphoto-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "aiosqlite>=0.21.0",
    "playwright>=1.50.0",
    "sqlalchemy[asyncio]>=2.0.38",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.9.10"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",   # pydocstyle
    "CPY", # flake8-copyright
    "T20", # flake8-print
]
